2005-08-23  Mo DeJong  <mdejong@users.sourceforge.net>

	* win/tkWin32Dll.c (DllMain): Replace old asm SEH
	approach with Kenny's new SEH implementation.
	[Tcl bug 1235544]

2005-08-23  Mo DeJong  <mdejong@users.sourceforge.net>

	* unix/Makefile.in: Subst BUILD_TCLSH and TCL_EXE.
	* unix/configure: Regen.
	* unix/configure.in: Update minimum autoconf version
	to 2.59. Invoke SC_PROG_TCLSH and SC_BUILD_TCLSH.
	* unix/tcl.m4 (SC_PROG_TCLSH, SC_BUILD_TCLSH):
	* win/Makefile.in: Subst BUILD_TCLSH and TCL_EXE.
	* win/configure: Regen.
	* win/configure.in: Update minimum autoconf version
	to 2.59. Invoke SC_BUILD_TCLSH.
	* win/tcl.m4 (SC_PROG_TCLSH, SC_BUILD_TCLSH):
	Split confused search for tclsh on PATH and
	build and install locations into two macros.
	SC_PROG_TCLSH searches just the PATH.
	SC_BUILD_TCLSH determines the name of the tclsh
	executable in the Tcl build directory.
	[Tcl bug 1160114]
	[Tcl patch 1244153]

2005-08-22  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXButton.c:
	* macosx/tkMacOSXDialog.c: fix warnings.

2005-08-20  Joe Mistachkin  <joe@mistachkin.com>

	* win/tkWinX.c: Fixed bad cast. [Bug 1216006]

2005-08-18  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>

	* doc/GetFont.3: Reworded to reflect the truth. [Bug 1151523]

2005-08-16 George Peter Staplin <GeorgePS@XMission.com>

	* doc/CrtItemType.3 prototypes were lacking [] after objv.  Thus
	the man page was wrong about the actual prototypes.  This was verified
	by studying tkCanvBmap.c.

2005-08-13 Chengye Mao <chengye.geo@yahoo.com>

	* generic/tkOldConfig.c Fixed bug # 1258604.  This bug was
	introduced into the modfied Tk_ConfigureWidget. It failed
	to properly handle the specFlags' bit TK_CONFIG_OPTION_SPECIFIED.

2005-08-12  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>

	* generic/tkOldConfig.c (Tk_ConfigureWidget): Stop storing per-thread
	data in global data structures. Store it in per-interpreter data (i.e.
	per-thread data) instead. [Bug 749908]
